// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHorizontalRectSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--rect euiHistogramSeries"
          transform="translate(40,10)"
        >
          <rect
            height="0"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="0"
            x="0"
            y="150"
          />
          <rect
            height="150"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="550"
            x="0"
            y="150"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="135"
            y2="135"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="105"
            y2="105"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="75"
            y2="75"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="45"
            y2="45"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="15"
            y2="15"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(55, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(110, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(165, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(220, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(275, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(385, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(440, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(495, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(550, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 135)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 105)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 75)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 45)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 15)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2 euiSeriesChartContainer"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width: 100%; height: 100%;"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--rect euiHistogramSeries"
          transform="translate(40,10)"
        >
          <rect
            height="0"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="0"
            x="0"
            y="150"
          />
          <rect
            height="150"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="550"
            x="0"
            y="150"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="135"
            y2="135"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="105"
            y2="105"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="75"
            y2="75"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="45"
            y2="45"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="15"
            y2="15"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(55, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(110, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(165, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(220, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(275, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(385, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(440, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(495, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(550, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 135)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 105)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 75)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 45)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 15)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--rect euiHistogramSeries"
          transform="translate(40,10)"
        >
          <rect
            height="42.85714285714286"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="0"
            x="137.5"
            y="150"
          />
          <rect
            height="0"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="275"
            x="137.5"
            y="150"
          />
        </g>
        <g
          class="rv-xy-plot__series rv-xy-plot__series--rect euiHistogramSeries"
          transform="translate(40,10)"
        >
          <rect
            height="42.85714285714285"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="0"
            x="137.5"
            y="107.14285714285714"
          />
          <rect
            height="150"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="275"
            x="137.5"
            y="150"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="128.57142857142858"
            y2="128.57142857142858"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="107.14285714285714"
            y2="107.14285714285714"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="85.71428571428572"
            y2="85.71428571428572"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="64.28571428571429"
            y2="64.28571428571429"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="42.85714285714286"
            y2="42.85714285714286"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="21.428571428571445"
            y2="21.428571428571445"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(137.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(412.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 128.57142857142858)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 107.14285714285714)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 85.71428571428572)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 64.28571428571429)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 42.85714285714286)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 21.428571428571445)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
